--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,20 @@
 
 version: 2
 jobs:
-  build-deploy:
+  build:
     machine:
       enable: true
       docker_layer_caching: true
     steps:
       - checkout
       - run: ./bin/build
+      - run: ./bin/deploy
+  deploy:
+    machine:
+      enable: true
+      docker_layer_caching: true
+    steps:
+      - checkout
       - run: ./bin/deploy
   integration_test:
     steps:
@@ -30,7 +37,19 @@ workflows:
   version: 2
   build_test_deploy_release:
     jobs:
-      - integration_test
-      - build-deploy:
+      - integration_test:
+          filters:
+            tags:
+              only: /.*/
+      - build:
+          filters:
+            tags:
+              only: /.*/
         requires:
           - integration_test
+      - deploy:
+          filters:
+            tags:
+              only: /.*/
+        requires:
+          - build
